# type-level-web-server

./: .gitmodules  00-nats.hs  01-listappend.hs  02-io.hs  03-io.hs  HttpServer.hs  README.md  TypoParsec.hs  monadicwarsaw.cabal  run
runtime/: Main.hs  Parser.hs
