name:                monadicwarsaw
version:             0.1.0.0
synopsis:            Hello World in Type level Haskell with IO
license:             BSD3
author:              Maciej Bielecki
maintainer:          zyla@prati.pl
build-type:          Simple
cabal-version:       >=1.10

executable runtime
  hs-source-dirs:      runtime
  main-is:             Main.hs
  other-modules:       Parser
  build-depends:       base >=4.14 && <4.16
                     , ghc-prim
                     , hint
                     , parsec
                     , unix
                     , network
                     , filepath
                     , bytestring

  default-language:    Haskell2010
